# power-meter

./: .gitignore  CMakeLists.txt  README.md
boards/: custom_board.h
cmake/: nrf-utils.cmake  nrf.cmake  nrf5.cmake  utils.cmake
nRF5-cmake-scripts/: nRF5-cmake.cmake  nRF5-keys.cmake
nrf-sdk/: README.md
src/blinky/: CMakeLists.txt  main.c
